tests/snapshots/render_snapshots__overlays__sql_modal_error_with_message.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── NORMAL ────────────────────────────────────────╮       │
│       │SELECT * FORM users                                           │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │✗ ERROR:  syntax error at or near "FORM"                      │       │
│       ╰ ⌥Enter: Run │ y: Yank │ Enter: Insert │ q: Close ────────────╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
⌥Enter:Run  y:Yank  Enter:Insert  q:Close
